# prelamda

./: CMakeLists.txt  README.md  main.c  test.conf
include/: gen.h  lex.h  prelamda.h  token.h
include/lib/: mem.h  parse.h
src/: gen.c  lex.c  token.c
src/lib/: mem.c  parse.c
test/: lex1.cc  lex1.txt  test.txt
